--- a/Worksheet4/RWorkhseet_celestra#4a.Rmd
+++ b/Worksheet4/RWorkhseet_celestra#4a.Rmd
@@ -70,5 +70,14 @@ new_order_data
 
 
 ```
+5. a.
+```{r}
+import_march <- read.table("import_march.csv", header = TRUE, sep =",")
 
+```
+
+b. 
+```{r}
+import_march
+```
 
