--- a/worksheet1/RWorksheet_celestra#1.Rmd
+++ b/worksheet1/RWorksheet_celestra#1.Rmd
@@ -2,7 +2,9 @@
 title: "Worksheet1"
 author: "Kenneth Celestra"
 date: "2024-09-04"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
 ---
 
 ```{r setup, include=FALSE}
