--- a/Worksheet4/RWorkhseet_celestra#4a.Rmd
+++ b/Worksheet4/RWorkhseet_celestra#4a.Rmd
@@ -80,4 +80,60 @@ b.
 ```{r}
 import_march
 ```
+6
+a.
+```{r}
+ 
+  num <-readline(prompt = "Please select a number between 1 and 50: ")
+  
+  
+  if (num < 1 || num > 50) {
+    print("The number selected is beyond the range of 1 to 50")
+  } else if (num == 20) {
+    print("TRUE")
+  } else {
+    print(num)
+  }
+```
+7
+a.
+```{r}
+  bills <- c(1000, 500, 200, 100, 50)
+  numbills <- 0
+  
+  snackprice <- as.integer(readline(prompt = "Enter the price of the snack (divisible by 50): "))
+  
+  for (i in bills) {
+    if (snackprice >= i) {
+      count <- snackprice %/% i
+      numbills <- numbills + count
+      snackprice <- snackprice %% i
+    }
+  }
+paste("Minimum number of bills needed:", numbills)
+```
+8
+a.
+```{r}
+df <- data.frame(
+  Name = c("Annie", "Thea", "Steve", "Hanna"),
+  Grade1 = c(85, 65, 75, 95),
+  Grade2 = c(65, 75, 55, 75),
+  Grade3 = c(85, 90, 80, 100),
+  Grade4 = c(100, 90, 85, 90)
+)
+print(df)
+
+```
+b.
+```{r}
+for (i in 1:nrow(df)) {
+  total <- df$Grade1[i] + df$Grade2[i] + df$Grade3[i] + df$Grade4[i]
+  avg <- total / 4
+  
+ if (avg > 90) {
+    print(paste(df$Name[i], "'s average grade this semester is", round(avg, 2)))
+ } 
+}
+```
 
