--- a/Worksheet4/RWorkhseet_celestra#4b.Rmd
+++ b/Worksheet4/RWorkhseet_celestra#4b.Rmd
@@ -183,3 +183,23 @@ plot(
 ```
 f
 The scatterplot depicts the relationship between Sepal.Length and Sepal.Width for three iris species: setosa, versicolor, and virginica. Setosa is clearly clustered in the lower left quadrant, with smaller dimensions, distinguishing it from the other species. Versicolor exhibits a broader range of sizes, overlapping with virginica, which generally has larger measurements.
+7.
+a
+```{r}
+library(readxl)
+alexa_data <- read_excel("alexa_file.xlsx")
+
+alexa_data$variation <- gsub("Black  Dot", "BlackDot", alexa_data$variation)
+alexa_data$variation <- gsub("Black  Plus", "BlackPlus", alexa_data$variation)
+alexa_data$variation <- gsub("Black  Show", "BlackShow", alexa_data$variation)
+alexa_data$variation <- gsub("Black  Spot", "BlackSpot", alexa_data$variation)
+
+alexa_data$variation <- gsub("White  Dot", "WhiteDot", alexa_data$variation)
+alexa_data$variation <- gsub("White  Plus", "WhitePlus", alexa_data$variation)
+alexa_data$variation <- gsub("White  Show", "WhiteShow", alexa_data$variation)
+alexa_data$variation <- gsub("White  Spot", "WhiteSpot", alexa_data$variation)
+
+alexa_data$variation[1052:2000]
+
+```
+
